--- a/ui-frontend/packages/catalog-ui-search/src/main/webapp/styles/styles.less
+++ b/ui-frontend/packages/catalog-ui-search/src/main/webapp/styles/styles.less
@@ -1,3 +1,9 @@
+.h-14 {
+  height: 3.5rem;
+}
+.h-18 {
+  height: 4.5rem;
+}
 .left-1\/2 {
   left: 50%;
 }
@@ -75,6 +81,18 @@
 }
 .min-h-16 {
   min-height: 4rem;
+}
+.min-h-32 {
+  min-height: 8rem;
+}
+.min-h-48 {
+  min-height: 12rem;
+}
+.min-h-80 {
+  min-height: 20rem;
+}
+.min-h-120 {
+  min-height: 30rem;
 }
 .max-h-16 {
   max-height: 4rem;
